Fix box-shadow color in TextBox component for improved visibility

--- a/src/components/styles/TextBox.module.css
+++ b/src/components/styles/TextBox.module.css
@@ -1,7 +1,7 @@
 .textBox {
   background-color: rgb(var(--color-primary-100));
   border: none;
-  box-shadow: 0 0 8px 0 rgba(var(--color-primary-900), 0.5);
+  box-shadow: 0 0 8px 0 rgba(var(--color-primary-700), 0.5);
   width: 100%;
   height: 100%;
   min-height: 200px;
@@ -22,7 +22,7 @@
 
 .textBox:focus {
   box-shadow:
-    0 0 8px 0 rgba(var(--color-primary-900), 0.5),
+    0 0 8px 0 rgba(var(--color-primary-700), 0.5),
     inset 0 0 0 2px rgb(var(--color-primary-700));
   outline: none;
 }
